@@ -2,6 +2,7 @@ version 0.77.11
 	--model ( buggy )
 	--nowarnings
 	--device
+	Linux: Using /sys/block if /sys/class/scsi_generic is unaccessible ( Debian Wheezy )
 
 version 0.77.10 ( 2012-04-15 )
 	Precisier delay handling
